# discord-compiler-bot

./: .env.example  .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  README.md  changelog.md  run.bash
.github/: CONTRIBUTING.md
.github/workflows/: main.yml  publish.yml  rust-clippy.yml
godbolt/: .gitignore  Cargo.toml  README.md  result.json
godbolt/src/: lib.rs
godbolt/src/tests/: tests.rs
scripts/: details.py
src/: README.md  build.rs  cache.rs  events.rs  main.rs
src/apis/: dbl.rs  insights.rs  quick_link.rs
src/boilerplate/: c.rs  cpp.rs  csharp.rs  generator.rs  java.rs  mod.rs  php.rs
src/commands/: asm.rs  block.rs  botinfo.rs  compile.rs  compilers.rs  cpp.rs  format.rs  formats.rs  help.rs  insights.rs  invite.rs  languages.rs  ping.rs  unblock.rs
src/cppeval/: eval.rs
src/managers/: command.rs  compilation.rs  stats.rs
src/slashcmds/: asm.rs  compile.rs  cpp.rs  diff.rs  diff_msg.rs  format.rs  help.rs  invite.rs  ping.rs
src/stats/: structures.rs
src/tests/: cpp.rs  mod.rs  parser.rs
src/tests/boilerplate/: cpp.rs  java.rs
src/utls/: blocklist.rs  constants.rs  parser.rs
src/utls/discordhelpers/: embeds.rs  interactions.rs  menu.rs  mod.rs
wandbox/: .cargo_vsc_info.json  .gitignore  Cargo.toml  README.md
wandbox/src/: lib.rs
wandbox/src/cache/: mod.rs
wandbox/src/tests/: tests.rs
