[package]
name        = "discord-compiler-bot"
description = "🤖 discord bot to compile your spaghetti code"
version     = "1.5.2"
authors     = ["ThomasByr"]
edition     = "2021"
build       = "src/build.rs"

[profile.production]
inherits = "release"
debug = true

[dev-dependencies]
rusty-hook = "0.11"

[dependencies]
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.11" }
dotenv             = "0.15.0"
regex              = "1"
log                = "0.4"
pretty_env_logger  = "0.4"
strip-ansi-escapes = "0.1.0"
serde              = { version = "1.0.*", features = ["derive"] }
serde_json         = "1.0"
lru-cache          = "0.1"
async-trait        = "0.1"
content_inspector  = "0.2"
shell-words        = "0.1"
const_format       = "0.2"
lazy_static        = "1.4.0"
similar            = "2.1.0"
#tests
indoc        = "2.0"
test-context = "0.1"
#dbl
dbl-rs       = "0.3"
futures-util = "0.3.6"
warp         = "0.3"
chrono       = "0.4.19"

[target.'cfg(target_arch = "arm")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.serenity]
version = "=0.11.6"
default-features = false
features = [
    "unstable_discord_api",
    "collector",
    "gateway",
    "builder",
    "standard_framework",
    "http",
    "model",
    "client",
    "framework",
    "utils",
    "rustls_backend",
]

[dependencies.wandbox]
path = "wandbox"

[dependencies.godbolt]
path = "godbolt"
