[package]
name       = "godbolt"
version    = "0.1.0"
authors    = ["ThomasByr"]
edition    = "2021"
license    = "LGPL-3.0"
readme     = "README.md"
keywords   = ["Godbolt"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
serde_json = "1.0"
serde      = { version = "1.0.*", features = ["derive"] }
reqwest    = { version = "0.11", features = ["json"] }
tokio      = { version = "1", features = ["macros"] }
